Finished the web, 75% looks alike.

--- a/index.html
+++ b/index.html
@@ -8,20 +8,26 @@
 </head>
 <body>
         <div class="header_container">
-            <div class="header_1">
-                <h1>Header Logo</h1>
+            <div class="upper">
+                <div class="header_1">
+                    <h1>Header Logo</h1>
+                </div>
+                <div class="header_2"><h6>header link one</h6></div>
+                <div class="header_3"><h6>header link two</h6></div>
+                <div class="header_4"><h6>header link three</h6></div>
             </div>
-            <div class="header_2"><h6>Link 1</h6></div>
-            <div class="header_3"><h6>Link 2</h6></div>
-            <div class="header_4"><h6>Link 3</h6></div>
-            <div class="header_5">
-                <h6>This website is awesome</h6>
-                <p>This website has some subtext that goes here under the main title.
+            
+             <div class="lower">
+                <div class="header_5">
+                    <h6>This website is <br>awesome<br></h6>
+                    <p>This website has some subtext that goes here under the main title.
                     It's a smaller font and the color is lower contrast.    
-                </p>
-                <button class="Sign_up">Sign Up</button>
+                    </p>
+                    <p class="Sign_up">Sign Up</p>
+                </div>
+                 <div class="header_6"><h6>Img holder</h6></div>
             </div>
-            <div class="header_6"><h6>Img holder</h6></div>
+
         </div>
 
         <div class="container_2">
@@ -63,14 +69,17 @@
             </p>
         </div>
         <div class="container_4">
-            <div class="con_4_text">
-                <P class="con_4_header">Call to action! It's time!</P>
-                <P class="con_4_subtext">Sign up for our product by clicking that button right over there!</P>
+            <div class="inner_4">
+                <div class="con_4_text">
+                    <P class="con_4_header">Call to action! It's time!</P>
+                    <P class="con_4_subtext">Sign up for our product by clicking that button right over there!</P>
+                </div>
+                <div class="sign_up_2nd">sign up</div>
             </div>
-            <button class="sign_up_2nd">sign up</button>
         </div>
+
         <div class="footer_container">
-            
+            <p>Copyright | Tung</p>
         </div>
 </body>
 </html>
